Fix a bug in menu on mobiles only

--- a/wp-content/themes/distylight/assets/css/_layout.sass
+++ b/wp-content/themes/distylight/assets/css/_layout.sass
@@ -134,3 +134,5 @@ header.navigation
 @media screen and (max-width: 767px)
   header.navigation
     margin: 0 -20px 0 -20px
+    .brand
+      width: 220px
